# flatagents

./: .gitignore  LICENSE  README.md  declarative-agent.d.ts  flatmachine.d.ts  pyproject.toml
local/: flatmachines-plan.md
scripts/: generate-spec-assets.ts  lint-spec-versions.sh
sdk/js/: README.md  package-lock.json  package.json
sdk/js/src/: index.ts
sdk/python/: README.md  pyproject.toml  release.sh
sdk/python/examples/: README.md
sdk/python/examples/character_card/config/: machine.yml
sdk/python/examples/declarative_gepa_self_optimizer/: requirements.txt  run.sh
sdk/python/examples/declarative_mdap/: pyproject.toml
sdk/python/examples/declarative_mdap/config/: hanoi.yml
sdk/python/examples/declarative_mdap/src/declarative_mdap/: calibration.py  mdap.py
sdk/python/examples/declarativeagent_helloworld/: pyproject.toml  run.sh
sdk/python/examples/declarativeagent_helloworld/src/declarativeagent_helloworld/: __init__.py  main.py
sdk/python/examples/gepa_self_optimizer/: main.py  run.sh  smoketest.sh
sdk/python/examples/gepa_self_optimizer/docs/: GEPA_COMPLIANCE_IMPROVEMENTS.md  PLAN.md
sdk/python/examples/gepa_self_optimizer/src/: __init__.py  data_generator.py  utils.py  (+3 more)
sdk/python/examples/helloworld/: README.md  run.sh
sdk/python/examples/human_in_loop/: run.sh
sdk/python/examples/mdap/: calibrate.sh  run.sh
sdk/python/examples/writer_critic/: README.md  run.sh
sdk/python/flatagents/: __init__.py  baseagent.py  declarativeagent.py  execution.py  flatagent.py  flatmachine.py  monitoring.py
sdk/python/tests/integration/: run.sh
(+22 files in other folders)
