[project]
name = "declarative_mdap"
version = "0.1.0"
description = "MDAP framework with declarative agents"
dependencies = ["flatagents[litellm]", "jsonschema"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
mdap-demo = "declarative_mdap.demo:main"
